tests/negative/lexer/camel-case2.orng
let const C4Mel: Type = Int

fn main() -> Int {
    4
}